# wasmi-demo

./: Cargo.toml
contracts/: Cargo.toml
contracts/src/: lib.rs
