[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#zkdex_wasm={path="/Users/lvcong/rust/zkdex-wasm-poc/core/lib/zkdex",features=["zkwasm"]}
wasm-bindgen = "0.2.87"
zkwasm-rust-sdk = { path="/Users/lvcong/rust/zkWasm-rust" }
#utils={path="/Users/lvcong/rust/zkdex-wasm-poc/core/lib/utils"}
primitive-types = {version="0.12.1", default-features = false, features=["num-traits"]}
#getrandom = { version = "0.2", features = ["js"] }